--- a/index.html
+++ b/index.html
@@ -1,20 +1,136 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
-</head>
-<body>
-	<h1>allright</h1>
-	<div>
-		<ul>
-			<li>1</li>
-			<li>2</li>
-			<li>3</li>
-			<li>4</li>
-		</ul>
-	</div>
-</body>
+<html lang="ru">
+
+	<head>
+		<meta charset="UTF-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>webstudio</title>
+	</head>
+	<header>
+		<div class="container">
+			<div class="header">
+				<div class="header__left">
+					<div class="header__logo logo">
+						<a href="#" lang="en"><span>web</span>studio</a>
+					</div>
+					<nav class="header__menu">
+						<ul class="header__list">
+							<li class="header__link">
+								<a href="">Студия</a>
+							</li>
+							<li class="header__link">
+								<a href="">Портфолио</a>
+							</li>
+							<li class="header__link">
+								<a href="">Контакты</a>
+							</li>
+						</ul>
+					</nav>
+				</div>
+				<div class="header__right">
+					<a href="mailto:info@devstudio.com">info@devstudio.com</a>
+					<a href="tel:+38 096 111 11 11">+38 096 111 11 11</a>
+				</div>
+			</div>
+		</div>
+	</header>
+
+	<body>
+		<section class="top">
+			<div class="container">
+				<h1>Эффективные решения для вашего бизнеса</h1>
+				<button type="button"><span> Заказать услугу</span></button>
+			</div>
+		</section>
+		<section class="principles">
+			<div class="container">
+				<ul class="principles__list">
+					<li class="principles__iteam">
+						<h3>Внимание к деталям</h3>
+						<p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+					</li>
+					<li class="principles__iteam">
+						<h3>Пунктуальность</h3>
+						<p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+					</li>
+					<li class="principles__iteam">
+						<h3>Планирование</h3>
+						<p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+					</li>
+					<li class="principles__iteam">
+						<h3>Современные технологии</h3>
+						<p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+					</li>
+				</ul>
+			</div>
+		</section>
+		<section class="works">
+			<div class="container">
+				<h2 class="works__tittle title">Чем мы занимаемся</h2>
+				<ul class="works__list">
+					<li class="works__foto">
+						<img src="./img/img1.jpg" alt="работа над проектами" width="370">
+					</li>
+					<li class="works__foto">
+						<img src="./img/img2.jpg" alt="работа над проектами" width="370">
+					</li>
+					<li class="works__foto">
+						<img src="./img/img3.jpg" alt="работа над проектами" width="370">
+					</li>
+				</ul>
+			</div>
+		</section>
+		<section class="team">
+			<div class="container">
+				<h2 class="team__tittle title">Наша команда</h2>
+				<div class="team__person">
+					<ul class="team__list">
+						<li class="team__iteam">
+							<img src="./img/img4.jpg" alt="Игорь Демьяненко" width="270">
+							<h3>Игорь Демьяненко</h3>
+							<p lang="en">Product Designer</p>
+						</li>
+						<li class="team__iteam">
+							<img src="./img/img5.jpg" alt="Ольга Репина" width="270">
+							<h3>Ольга Репина</h3>
+							<p lang="en">Frontend Developer</p>
+						</li>
+						<li class="team__iteam">
+							<img src="./img/img6.jpg" alt="Николай Тарасов" width="270">
+							<h3>Николай Тарасов</h3>
+							<p lang="en">Marketing</p>
+						</li>
+						<li class="team__iteam">
+							<img src="./img/img7.jpg" alt="Михаил Ермаков" width="270">
+							<h3>Михаил Ермаков</h3>
+							<p lang="en">UI Designer</p>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</section>
+	</body>
+
+	<footer>
+		<div class="container">
+			<div class="footer__logo logo">
+				<a href="#" lang="en"><span>web</span>studio</a>
+			</div>
+			<address>
+				<ul class="footer__list">
+					<li class="footer__link">
+						<a  href="https://goo.gl/maps/9fmKYEebHjoqxfCN7" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a>
+					</li>
+					<li class="footer__link">
+						<a href="mailto:info@example.com">info@example.com</a>
+					</li>
+					<li class="footer__link">
+						<a href="tel:+38 099 111 11 11">+38 099 111 11 11</a>
+					</li>
+				</ul>
+			</address>
+		</div>
+	</footer>
+
 </html>
