--- a/index.html
+++ b/index.html
@@ -87,22 +87,22 @@
 				<div class="team__person">
 					<ul class="team__list">
 						<li class="team__iteam">
-							<img src="./img/img4.jpg" alt="Игорь Демьяненко" width="270">
+							<img src="./img/img4.jpg" alt="фото Игорь Демьяненко" width="270">
 							<h3>Игорь Демьяненко</h3>
 							<p lang="en">Product Designer</p>
 						</li>
 						<li class="team__iteam">
-							<img src="./img/img5.jpg" alt="Ольга Репина" width="270">
+							<img src="./img/img5.jpg" alt="фото Ольга Репина" width="270">
 							<h3>Ольга Репина</h3>
 							<p lang="en">Frontend Developer</p>
 						</li>
 						<li class="team__iteam">
-							<img src="./img/img6.jpg" alt="Николай Тарасов" width="270">
+							<img src="./img/img6.jpg" alt="фото Николай Тарасов" width="270">
 							<h3>Николай Тарасов</h3>
 							<p lang="en">Marketing</p>
 						</li>
 						<li class="team__iteam">
-							<img src="./img/img7.jpg" alt="Михаил Ермаков" width="270">
+							<img src="./img/img7.jpg" alt="фото Михаил Ермаков" width="270">
 							<h3>Михаил Ермаков</h3>
 							<p lang="en">UI Designer</p>
 						</li>
