--- a/index.html
+++ b/index.html
@@ -5,33 +5,34 @@
 		<meta charset="UTF-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="stylesheet" href="css/style.css">
 		<title>webstudio</title>
 	</head>
 	<header>
 		<div class="container">
 			<div class="header">
-				<div class="header__left">
 					<div class="header__logo logo">
 						<a href="#" lang="en"><span>web</span>studio</a>
 					</div>
-					<nav class="header__menu">
-						<ul class="header__list">
-							<li class="header__link">
-								<a href="">Студия</a>
-							</li>
-							<li class="header__link">
-								<a href="">Портфолио</a>
-							</li>
-							<li class="header__link">
-								<a href="">Контакты</a>
-							</li>
-						</ul>
-					</nav>
-				</div>
-				<div class="header__right">
-					<a href="mailto:info@devstudio.com">info@devstudio.com</a>
-					<a href="tel:+38 096 111 11 11">+38 096 111 11 11</a>
-				</div>
+					<div class="header__left">
+						<nav class="header__menu">
+							<ul class="header__list">
+								<li class="header__link">
+									<a href="">Студия</a>
+								</li>
+								<li class="header__link">
+									<a href="">Портфолио</a>
+								</li>
+								<li class="header__link">
+									<a href="">Контакты</a>
+								</li>
+							</ul>
+						</nav>
+					</div>
+					<div class="header__right">
+						<a href="mailto:info@devstudio.com">info@devstudio.com</a>
+						<a href="tel:+38 096 111 11 11">+38 096 111 11 11</a>
+					</div>
 			</div>
 		</div>
 	</header>
