--- a/index.html
+++ b/index.html
@@ -8,36 +8,37 @@
 		<link rel="stylesheet" href="css/style.css">
 		<title>webstudio</title>
 	</head>
-	<header>
-		<div class="container">
-			<div class="header">
-					<div class="header__logo logo">
-						<a href="#" lang="en"><span>web</span>studio</a>
-					</div>
-					<div class="header__left">
-						<nav class="header__menu">
-							<ul class="header__list">
-								<li class="header__link">
-									<a href="">Студия</a>
-								</li>
-								<li class="header__link">
-									<a href="">Портфолио</a>
-								</li>
-								<li class="header__link">
-									<a href="">Контакты</a>
-								</li>
-							</ul>
-						</nav>
-					</div>
-					<div class="header__right">
-						<a href="mailto:info@devstudio.com">info@devstudio.com</a>
-						<a href="tel:+38 096 111 11 11">+38 096 111 11 11</a>
-					</div>
-			</div>
-		</div>
-	</header>
 
 	<body>
+		<header>
+		<div class="container">
+			<div class="header">
+					<a href="#" lang="en">web<span>studio</span></a>
+					<nav class="header__menu">
+						<ul class="header__list">
+							<li class="header__link">
+								<a href="">Студия</a>
+							</li>
+							<li class="header__link">
+								<a href="">Портфолио</a>
+							</li>
+							<li class="header__link">
+								<a href="">Контакты</a>
+							</li>
+						</ul>
+					</nav>
+					<ul class="header__contacts">
+						<li class="header__element">
+						<a href="mailto:info@devstudio.com">info@devstudio.com</a>
+						</li>
+						<li class="header__element">
+							<a href="tel:+38 096 111 11 11">+38 096 111 11 11</a>
+						</li>
+					</ul>
+			</div>
+		</div>
+		</header>
+
 		<section class="top">
 			<div class="container">
 				<h1>Эффективные решения для вашего бизнеса</h1>
@@ -46,22 +47,31 @@
 		</section>
 		<section class="principles">
 			<div class="container">
+				<h2></h2>
 				<ul class="principles__list">
 					<li class="principles__iteam">
-						<h3>Внимание к деталям</h3>
-						<p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+						<div class="principles__text">
+							<h3>Внимание к деталям</h3>
+							<p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+						</div>
 					</li>
 					<li class="principles__iteam">
-						<h3>Пунктуальность</h3>
-						<p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+						<div class="principles__text">
+							<h3>Пунктуальность</h3>
+							<p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+						</div>
 					</li>
 					<li class="principles__iteam">
-						<h3>Планирование</h3>
-						<p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+						<div class="principles__text">
+							<h3>Планирование</h3>
+							<p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+						</div>
 					</li>
 					<li class="principles__iteam">
-						<h3>Современные технологии</h3>
-						<p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+						<div class="principles__text"></div>
+							<h3>Современные технологии</h3>
+							<p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+						</div>
 					</li>
 				</ul>
 			</div>
@@ -85,53 +95,50 @@
 		<section class="team">
 			<div class="container">
 				<h2 class="team__tittle title">Наша команда</h2>
-				<div class="team__person">
-					<ul class="team__list">
-						<li class="team__iteam">
-							<img src="./img/img4.jpg" alt="фото Игорь Демьяненко" width="270">
-							<h3>Игорь Демьяненко</h3>
-							<p lang="en">Product Designer</p>
-						</li>
-						<li class="team__iteam">
-							<img src="./img/img5.jpg" alt="фото Ольга Репина" width="270">
-							<h3>Ольга Репина</h3>
-							<p lang="en">Frontend Developer</p>
-						</li>
-						<li class="team__iteam">
-							<img src="./img/img6.jpg" alt="фото Николай Тарасов" width="270">
-							<h3>Николай Тарасов</h3>
-							<p lang="en">Marketing</p>
-						</li>
-						<li class="team__iteam">
-							<img src="./img/img7.jpg" alt="фото Михаил Ермаков" width="270">
-							<h3>Михаил Ермаков</h3>
-							<p lang="en">UI Designer</p>
-						</li>
-					</ul>
-				</div>
-			</div>
-		</section>
-	</body>
-
-	<footer>
-		<div class="container">
-			<div class="footer__logo logo">
-				<a href="#" lang="en"><span>web</span>studio</a>
-			</div>
-			<address>
-				<ul class="footer__list">
-					<li class="footer__link">
-						<a  href="https://goo.gl/maps/9fmKYEebHjoqxfCN7" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a>
+				<ul class="team__list">
+					<li class="team__iteam">
+						<img src="./img/img4.jpg" alt="фото Игорь Демьяненко" width="270">
+						<h3>Игорь Демьяненко</h3>
+						<p lang="en">Product Designer</p>
 					</li>
-					<li class="footer__link">
-						<a href="mailto:info@example.com">info@example.com</a>
+					<li class="team__iteam">
+						<img src="./img/img5.jpg" alt="фото Ольга Репина" width="270">
+						<h3>Ольга Репина</h3>
+						<p lang="en">Frontend Developer</p>
 					</li>
-					<li class="footer__link">
-						<a href="tel:+38 099 111 11 11">+38 099 111 11 11</a>
+					<li class="team__iteam">
+						<img src="./img/img6.jpg" alt="фото Николай Тарасов" width="270">
+						<h3>Николай Тарасов</h3>
+						<p lang="en">Marketing</p>
+					</li>
+					<li class="team__iteam">
+						<img src="./img/img7.jpg" alt="фото Михаил Ермаков" width="270">
+						<h3>Михаил Ермаков</h3>
+						<p lang="en">UI Designer</p>
 					</li>
 				</ul>
-			</address>
-		</div>
-	</footer>
+			</div>
+		</section>
+
+		<footer>
+			<div class="container">
+				<a href="#" lang="en"><span>web</span>studio</a>
+				<address>
+					<ul class="footer__list">
+						<li class="footer__link">
+							<a  href="https://goo.gl/maps/9fmKYEebHjoqxfCN7" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a>
+						</li>
+						<li class="footer__link">
+							<a href="mailto:info@example.com">info@example.com</a>
+						</li>
+						<li class="footer__link">
+							<a href="tel:+38 099 111 11 11">+38 099 111 11 11</a>
+						</li>
+					</ul>
+				</address>
+			</div>
+		</footer>
+		
+	</body>
 
 </html>
