--- a/portfolio.html
+++ b/portfolio.html
@@ -68,47 +68,47 @@
 					<div class="portfolio__body">
 						<ul class="portfolio__row">
 							<li class="portfolio__element element-portfolio">
-								<img src="./img/portfolio/img-1.jpg" alt="" class="element-portfolio__img" width="370">
+								<img src="./img/portfolio/car.jpg" alt="logo" class="element-portfolio__img" width="370">
 								<h3 class="tittle-h3">Технокряк</h3>
 								<p class="subtittle-h3">Веб-сайт</p>
 							</li>
 							<li class="portfolio__element element-portfolio">
-								<img src="./img/portfolio/img-2.jpg" alt="" class="element-portfolio__img" width="370">
+								<img src="./img/portfolio/img-2.jpg" alt="logo" class="element-portfolio__img" width="370">
 								<h3 class="tittle-h3">Постер New Orlean vs Golden Star</h3>
 								<p class="subtittle-h3">Дизайн</p>
 							</li>
 							<li class="portfolio__element element-portfolio">
-								<img src="./img/portfolio/img-3.jpg" alt="" class="element-portfolio__img" width="370">
+								<img src="./img/portfolio/img-3.jpg" alt="logo" class="element-portfolio__img" width="370">
 								<h3 class="tittle-h3">Ресторан Seafood</h3>
 								<p class="subtittle-h3">Приложение</p>
 							</li>
 							<li class="portfolio__element element-portfolio">
-								<img src="./img/portfolio/img-4.jpg" alt="" class="element-portfolio__img" width="370">
+								<img src="./img/portfolio/img-4.jpg" alt="logo" class="element-portfolio__img" width="370">
 								<h3 class="tittle-h3">Проект Prime</h3>
 								<p class="subtittle-h3">Маркетингт</p>
 							</li>
 							<li class="portfolio__element element-portfolio">
-								<img src="./img/portfolio/img-5.jpg" alt="" class="element-portfolio__img" width="370">
+								<img src="./img/portfolio/img-5.jpg" alt="logo" class="element-portfolio__img" width="370">
 								<h3 class="tittle-h3">Проект Boxes</h3>
 								<p class="subtittle-h3">Приложение</p>
 							</li>
 							<li class="portfolio__element element-portfolio">
-								<img src="./img/portfolio/img-6.jpg" alt="" class="element-portfolio__img" width="370">
+								<img src="./img/portfolio/img-6.jpg" alt="logo" class="element-portfolio__img" width="370">
 								<h3 class="tittle-h3">Inspiration has no Borders</h3>
 								<p class="subtittle-h3">Веб-сайт</p>
 							</li>
 							<li class="portfolio__element element-portfolio">
-								<img src="./img/portfolio/img-7.jpg" alt="" class="element-portfolio__img" width="370">
+								<img src="./img/portfolio/img-7.jpg" alt="logo" class="element-portfolio__img" width="370">
 								<h3 class="tittle-h3">Издание Limited Edition</h3>
 								<p class="subtittle-h3">Дизайн</p>
 							</li>
 							<li class="portfolio__element element-portfolio">
-								<img src="./img/portfolio/img-8.jpg" alt="" class="element-portfolio__img" width="370">
+								<img src="./img/portfolio/img-8.jpg" alt="logo" class="element-portfolio__img" width="370">
 								<h3 class="tittle-h3">Проект LAB</h3>
 								<p class="subtittle-h3">Маркетинг</p>
 							</li>
 							<li class="portfolio__element element-portfolio">
-								<img src="./img/portfolio/img-9.jpg" alt="" class="element-portfolio__img" width="370">
+								<img src="./img/portfolio/img-9.jpg" alt="logo" class="element-portfolio__img" width="370">
 								<h3 class="tittle-h3">Growing Business</h3>
 								<p class="subtittle-h3">Приложение</p>
 							</li>
